Reduced header padding to increase screen real estate, made filtering branches hide empty folders (needs improvement), added icon for currently checked out branch, added tooltips for change list icons, made change list buttons conditionally visible and work more consistently fixed large part of commit history table overflow, limited command history max characters per entry to 1000 and default page size to 10

--- a/src/app/components/commit-history/commit-history.component.scss
+++ b/src/app/components/commit-history/commit-history.component.scss
@@ -37,3 +37,7 @@ td .btn {
   padding-left: .6em;
   padding-right: .6em;
 }
+
+.commit-message-cell {
+  word-break: break-all;
+}
